# django-templates

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
project/: cookiecutter.json
project/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
project/{{cookiecutter.project_slug}}/src/config/: asgi.py  settings.py  urls.py  wsgi.py
project/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: asgi.py  settings.py  wsgi.py
project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: urls.py
