[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "django-templates"
version = "0.1.0"
description = ""
authors = ["Kai Kuhlmann <...>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
environs = {extras = ["django"], version = "^14.1.0"}
